--- a/Proyek.html
+++ b/Proyek.html
@@ -27,5 +27,6 @@ The <font color="red">World Wibe Web</font>(<font color= "green">WWW</font>)was 
 
 <hr color="blue">
 <p align = "center"> copyright &copy; 2013</p>
+<p align="center"> copyright &copy; 2022</p>
 </body>
 </html>
