--- a/Proyek.html
+++ b/Proyek.html
@@ -6,9 +6,7 @@
     <hr color="blue" width="150px">
 
 </head>
-
-INI ADALAH PARAGRAF BARU
-
+PENAMBAHAN PARAGRAF
 <body bgcolor="gray">
 <p align = "justify">
     A website, also written as <strong>Web site</strong>, <strong>web site</strong>, or simply <strong>site</strong>, is a set of related web pages served from a single web domain. A website is hosted on at least one web server,accesible via a network such as the internet or a private local area network through an internet address known as a <font color = "red" >Uniform Resource Locator</font>. All publicly accesible websites collectively constitute the <font color = "red">World Wibe Web</font>.
